--- a/.eslintrc
+++ b/.eslintrc
@@ -17,11 +17,15 @@
     },
     "env": {
         "es6": true,
-        "node": true
+        "node": true,
+        "browser": true
     },
     "ecmaFeatures": {
         "modules": true,
         "experimentalObjectRestSpread": true
+    },
+    "parserOptions": {
+        "sourceType": "module"
     },
     "extends": "eslint:recommended"
 }
