--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "react-dom": "^16.4.0"
   },
   "devDependencies": {
-    "webpack-cli": "^3.0.2"
+    "clean-webpack-plugin": "^0.1.19",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack-cli": "^3.0.2",
+    "webpack-dev-server": "^3.1.4"
   },
   "scripts": {
+    "start": "webpack-dev-server --port 3001 --global --inline --mode development",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "dev": "webpack --mode development"
