--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.21.0",
     "webpack-cli": "^3.0.2",
     "webpack-dev-server": "^3.1.4"
   },
