--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "style-loader": "^0.21.0",
+    "webpack": "^4.12.0",
     "webpack-cli": "^3.0.2",
     "webpack-dev-server": "^3.1.4"
   },
