--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "seedrandom": "^2.4.3",
     "styled-components": "^3.3.2"
   },
   "devDependencies": {
