--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.1.0",
     "mini-css-extract-plugin": "^0.4.5",
     "style-loader": "^0.21.0",
     "webpack": "^4.29.3",
